--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ember-cli-jshint": "^1.0.0",
     "ember-cli-qunit": "3.0.1",
     "ember-cli-release": "1.0.0-beta.2",
+    "ember-cli-sass": "5.5.1",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
@@ -36,10 +37,10 @@
     "ember-disable-prototype-extensions": "^1.1.0",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
+    "ember-paper": "1.0.0-alpha.3",
     "ember-resolver": "^2.0.3",
     "ember-sinon": "0.5.1",
     "ember-sinon-qunit": "1.3.4",
-    "ember-welcome-page": "^1.0.1",
     "loader.js": "^4.0.1"
   },
   "keywords": [
@@ -48,7 +49,7 @@
     "appboy-web-sdk"
   ],
   "dependencies": {
-    "appboy-web-sdk": "^1.5.0",
+    "appboy-web-sdk": "^1.5.1",
     "broccoli-funnel": "^1.0.6",
     "broccoli-merge-trees": "^1.1.4",
     "ember-cli-babel": "^5.1.6"
