--- a/package.json
+++ b/package.json
@@ -55,6 +55,9 @@
     "ember-cli-babel": "^5.1.6"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "configPath": "tests/dummy/config",
+    "versionCompatibility": {
+      "ember": ">= 2.0"
+    }
   }
 }
