--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "appboy-web-sdk": "^1.5.1",
     "broccoli-funnel": "^1.0.6",
     "broccoli-merge-trees": "^1.1.4",
-    "ember-cli-babel": "^5.1.6"
+    "ember-cli-babel": "^5.1.6",
+    "ouibounce": "0.0.12"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
