--- a/package.json
+++ b/package.json
@@ -59,9 +59,6 @@
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
-    "demoURL": "https://blimmer.github.io/ember-appboy",
-    "versionCompatibility": {
-      "ember": ">= 2.3"
-    }
+    "demoURL": "https://blimmer.github.io/ember-appboy"
   }
 }
