--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "scripts": {
     "build": "ember build",
     "start": "ember server",
-    "test": "ember try:each",
-    "deploy": "ember github-pages:commit --message \"Deploy gh-pages from commit $(git rev-parse HEAD)\"; git push; git checkout -"
+    "test": "ember try:each"
   },
   "repository": "https://github.com/blimmer/ember-appboy",
   "engines": {
@@ -22,8 +21,10 @@
     "broccoli-asset-rev": "^2.4.5",
     "ember-cli": "^2.13.2",
     "ember-cli-dependency-checker": "^2.0.0",
+    "ember-cli-deploy": "^1.0.0",
+    "ember-cli-deploy-build": "^1.1.0",
+    "ember-cli-deploy-git": "^1.1.1",
     "ember-cli-eslint": "^3.1.0",
-    "ember-cli-github-pages": "0.1.2",
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.4.3",
     "ember-cli-inject-live-reload": "^1.4.1",
