--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
     "ember-cli": "^2.13.2",
-    "ember-cli-dependency-checker": "^2.0.0",
-    "ember-cli-deploy": "^1.0.0",
+    "ember-cli-dependency-checker": "^2.0.1",
+    "ember-cli-deploy": "^1.0.1",
     "ember-cli-deploy-build": "^1.1.0",
     "ember-cli-deploy-git": "^1.1.1",
-    "ember-cli-eslint": "^3.1.0",
-    "ember-cli-htmlbars": "^2.0.1",
+    "ember-cli-eslint": "^4.0.0",
+    "ember-cli-htmlbars": "^2.0.2",
     "ember-cli-htmlbars-inline-precompile": "^0.4.3",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^4.0.0",
@@ -33,8 +33,8 @@
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-code-snippet": "^1.8.1",
-    "ember-disable-prototype-extensions": "^1.1.0",
+    "ember-code-snippet": "^1.9.0",
+    "ember-disable-prototype-extensions": "^1.1.2",
     "ember-export-application-global": "^2.0.0",
     "ember-font-awesome": "^3.0.5",
     "ember-load-initializers": "^1.0.0",
@@ -42,8 +42,8 @@
     "ember-resolver": "^4.1.0",
     "ember-sinon": "^0.7.0",
     "ember-sinon-qunit": "^1.6.0",
-    "ember-source": "^2.13.2",
-    "loader.js": "^4.4.0"
+    "ember-source": "^2.13.3",
+    "loader.js": "^4.5.1"
   },
   "keywords": [
     "ember-addon",
@@ -54,8 +54,8 @@
     "appboy-web-sdk": "^1.6.10",
     "broccoli-funnel": "^1.0.6",
     "broccoli-merge-trees": "^2.0.0",
-    "ember-cli-babel": "^6.1.0",
-    "ember-require-module": "0.1.1",
+    "ember-cli-babel": "^6.4.1",
+    "ember-require-module": "^0.1.2",
     "ouibounce": "0.0.12"
   },
   "ember-addon": {
